--- a/studio/package.json
+++ b/studio/package.json
@@ -9,7 +9,6 @@
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
-    "lint": "eslint .",
     "test": "sanity check"
   },
   "dependencies": {
@@ -34,21 +33,11 @@
     "react-player": "^1.15.2",
     "sanity-plugin-asset-source-thispersondoesnotexist": "0.0.1",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "sanity-plugin-color-list": "^2.0.1",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-google-analytics": "^0.2.6",
     "sanity-plugin-mux-input": "^0.2.1"
   },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier-eslint-cli": "^4.7.1"
-  }
+  "devDependencies": {}
 }
