--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
     "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.js -o src/css/tailwind.css",
-    "build": "gatsby build",
+    "build": "CI= npm run build",
     "clean-cache": "gatsby clean",
     "dev": "npm run clean-cache && gatsby develop",
     "lint": "eslint .",
