--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "sanity-kitchen-sink-web",
-  "version": "1.0.5",
-  "author": "Sanity <hello@sanity.io>",
+  "name": "riad-eid",
+  "version": "1.0.0",
+  "author": "eslamheshamm",
   "scripts": {
     "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.js -o src/css/tailwind.css",
     "build": "gatsby build",
