--- a/studio/package.json
+++ b/studio/package.json
@@ -23,6 +23,7 @@
     "@sanity/default-login": "^2.1.0",
     "@sanity/desk-tool": "^2.1.3",
     "@sanity/production-preview": "^2.1.0",
+    "@sanity/ui": "^0.33.24",
     "@sanity/vision": "^2.1.0",
     "katex": "^0.11.1",
     "prop-types": "^15.7.2",
@@ -37,7 +38,7 @@
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-google-analytics": "^0.2.6",
     "sanity-plugin-mux-input": "^0.2.1",
-    "sanity-plugin-seo-tools": "^1.1.2"
+    "sanity-plugin-seo-tools": "^2.0.0"
   },
   "devDependencies": {}
 }
